fix: dark mode button, about us page, course card design.

--- a/src/components/CourseCard/CourseCard.css
+++ b/src/components/CourseCard/CourseCard.css
@@ -48,20 +48,19 @@
   height: 100%;
 }
 
-/* .see-more-container {
+.see-more-container {
   display: flex;
   justify-content: center;
-} */
-
-/* .see-more-button {
-  width: 60%;
+}
+.see-more-button {
+  width: 40%;
   padding: 0.5rem 1rem;
   background-color: hsl(var(--primary));
   color: hsl(var(--primary-foreground));
   border-radius: 0.5rem;
   font-weight: 500;
   text-align: center;
-} */
+}
 
 .carousel-container {
   position: relative;
